新增AOP测试类

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.main.banner-mode=off
+spring.main.allow-bean-definition-overriding=true
 spring.messages.basename=i18n/messages
 
 server.port=8080
